# website-datamodel

./: .env.example  README.md  pyproject.toml
.github/workflows/: alembic_upgrade.yml
alembic/: env.py
alembic/versions/: 061c9840580b_alter_cv_table_during_type.py  15775f254f1d_add_me_table.py  2dfbce1c42ec_add_skills_table.py  55b9c3ac0389_rename_landing_socials_to_socials.py  69a5ee081cbc_add_cv_table.py  b35cccb3f86c_add_about_table.py  bae5498033c3_add_landing_socials_table.py  d4d39730656f_add_greetings_table.py
models/: website.py
