[tool.poetry]
name = "website-datamodel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "website_datamodel"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
